# pokeai-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  Makefile  README.md  compose.yaml  entrypoint.py  pyproject.toml  requirements.txt  settings.toml
pokeai_api/: app.py
pokeai_api/models/: __init__.py  pokemon.py
pokeai_api/resources/: __init__.py  exceptions.py  health.py  pokemon.py
pokeai_api/routers/: __init__.py  health.py  pokemon.py  resource_router.py
pokeai_api/schemas/: __init__.py  health.py  pokemon.py
